# IS659

./: .gitignore  CMakeLists.txt  README.md
analysis/: CMakeLists.txt  bat.cfg  bat.cpp  bat_split.cpp
analysis/include/: Hit.h  IS659Detector.h
calibration/: CMakeLists.txt
christiane_eff/: C1.cal  C1.cov.cal  C2.cal  C2.cov.cal  C3.cal  C3.cov.cal  C4.cal  C4.cov.cal
cmake/: add_subproject.cmake  path_config.cmake  path_setup.cmake  unpacked_data_setup.cmake
finestructure_fit/: SAM20Na.txt  SAM8HE_mUS.txt  SAM8HE_pUS.txt  SAM8He.txt  TotalSA_from_SAM.py  doSorting.sh  totalSA_20Na.txt  totalSA_8HE.txt
finestructure_fit/analysis1/: Analysis.cfg  Analysis.cpp  Analysis_hits.cpp  Analysis_with_betas.cpp  AngleAnalysis.cpp  BetaCoincidenceAnalysis.cpp  CMakeLists.txt  DoubleDssdAnalysis.cpp  KolmogorovTest.cpp  KolmogorovTest180.cpp  MergeTrees.cpp  SingleDssdAnalysis.cpp  ThreeCoincidenceAnalysis.cpp  ThreeCoincidenceAnalysis_backup.cpp  TwoCoincidenceAnalysis.cpp  bat_split.cpp  doAnalysis.sh  hstack.cpp  main.cpp  preAnalysis.cpp  proofOfConcept.cpp  runsToBeMerged.txt
finestructure_fit/analysis1/cmake/: tryharder.cmake
finestructure_fit/analysis1/include/: Hit.h  IS659Detector.h  projectutil.h
finestructure_fit/calibrationAnalysis/: Analysis.cpp  CMakeLists.txt  README.md
finestructure_fit/calibrationAnalysis/cmake/: projectutil.h.in
finestructure_fit/calibrationAnalysis/include/: Hit.h  projectutil.h
finestructure_fit/calout/: U1_old.cal  U2.cal  U3.cal  U4_old.cal
finestructure_fit/figures/: BetaAnal90deg.cpp  CMakeLists.txt  DetTimeCompare.cpp  DiagAngles90Deg.cpp  EnergyDist90deg.cpp  EnergyDistributions.cpp  EnergyTimeSpectra0Deg.cpp  FrontPageFig.cpp  Gd148PeakCalibration.cpp  Na20BetaAnalysis.cpp  Na20Edep.cpp  Na20ExSpec.cpp  SolidAngleCalc_alpha_t.cpp  TPROTONS.cpp  TPROTONS0deg.cpp  TPROTONS8HE_clover_fit.cpp  TPROTONS8He_fit.cpp  TPROTONS8Li.cpp  TPROTONS90deg.cpp  TPROTONS_fit.cpp  TimeSorting.cpp  TimeSorting0Deg.cpp  calibrationProcess.cpp  distributions180degs.cpp  dssdMultiplicityPlot.cpp  efficiencyOfCounts.txt  solidAnglePairDataPlot.py
finestructure_fit/figures/include/: projectutil.h
setup/: matcher.json  setup.json  setup_backup.json  setup_mUS.json  setup_pUS.json  setup_weighted.json  target.json
setup/clovers/: C1.cal  C2.cal  C3.cal  C4.cal
setup/plastics/: P1.cal  P2.cal  P3.json  P4.cal  P4.json
sorting/: CMakeLists.txt  matcher.json  matcher.json.save
